# iniad-cs2-django

./: .prettierrc  .stylelintrc.js  README.md  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml
.github/workflows/: check.yml  test.yml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_id_comment.py
blog/static/blog/css/: default.css
blog/static/blog/js/: index.js
blog/template/blog/: index.html
blog/templates/blog/: detail.html  edit.html  hello.html  index.html  tbd.html
config/: production.py  settings.py  urls.py
src/iniad_cs2_django/: __init__.py
