[project]
name = "iniad-cs2-django"
version = "0.1.0"
description = "Computer-Science-II Lecture at INIAD with Django"
authors = [
    { name = "mst-mkt", email = "s1f102303057@iniad.org" }
]
dependencies = [
    "django>=4.2.7",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[tool.rye.scripts]
dev = { cmd = "python manage.py runserver" }
format = { cmd = "ruff check --fix src" }
lint = { cmd = "ruff check src" }
typecheck = { cmd = "mypy src" }


[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py312"
select = ["ALL"]
fixable = ["ALL"]
exclude = [
    ".git",
    ".venv",
    ".mypy_cache",
    ".ruff_cache",
]
unfixable = ["F401", "F841"]
line-length = 100
indent-width = 4

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow-any-unimported = true
