[project]
authors = [
  {name = "mst-mkt", email = "s1f102303057@iniad.org"},
]
dependencies = [
  "django>=4.2.7",
]
description = "Computer-Science-II Lecture at INIAD with Django"
name = "iniad-cs2-django"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "django-stubs>=4.2.6",
]
managed = true

[tool.rye.scripts]
dev = {cmd = "python manage.py runserver"}
format = {cmd = "ruff check --fix ./blog"}
lint = {cmd = "ruff check ./blog"}
typecheck = {cmd = "mypy ./blog"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  ".mypy_cache",
  ".ruff_cache",
  "__init__.py",
]
fixable = ["ALL"]
ignore = ["F401", "F841", "D100", "D101"]
indent-width = 4
line-length = 100
select = ["ALL"]
target-version = "py312"
unfixable = ["F401", "F841", "D100", "D101"]

[tool.mypy]
disallow_any_unimported = true
python_version = "3.12"
strict = true
warn_unreachable = true
