[project]
authors = [
  {name = "mst-mkt", email = "s1f102303057@iniad.org"},
]
dependencies = [
  "django>=4.2.7",
]
description = "Computer-Science-II Lecture at INIAD with Django"
name = "iniad-cs2-django"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "ruff>=0.1.6",
  "mypy>=1.7.0",
  "django-stubs>=4.2.6",
  "djlint>=1.34.0",
]
managed = true

[tool.rye.scripts]
dev = {cmd = "python manage.py runserver"}
format = {chain = ["format:py", "format:html"]}
"format:html" = {cmd = "djlint ./blog/templates --reformat"}
"format:py" = {cmd = "ruff check --fix ./blog"}
lint = {chain = ["lint:py", "lint:html"]}
"lint:html" = {cmd = "djlint ./blog/templates --lint"}
"lint:py" = {cmd = "ruff check ./blog"}
migrate = {cmd = "python manage.py migrate"}
migration = {cmd = "python manage.py makemigrations"}
typecheck = {cmd = "mypy ./blog"}

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  ".mypy_cache",
  ".ruff_cache",
  "__init__.py",
  "migrations",
]
fixable = ["ALL"]
ignore = ["F401", "F841", "S311", "D"]
indent-width = 4
line-length = 100
select = ["ALL"]
target-version = "py312"
unfixable = ["F401", "F841"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.12"
strict = true
warn_unreachable = true

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.djlint]
ignore = "H006,H030,H031"
indent = 2
max_line_length = 80
profile = "django"
